adjust typewriter effect on mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <script src="js/t.min.js"></script>
 
       <!-- for on scroll animations -->
-      <link rel="stylesheet" href="animate.css">
+      <link rel="stylesheet" href="css/animate.css">
       <script src="js/wow.min.js"></script>
 
 </head>
@@ -65,7 +65,7 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">Web and Dekstop developer</h1>
+                        <h1 class="line anim-typewriter">Web and Dekstop developer.</h1>
                   </div>
             </div>
 
