--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
       <title>Project | Portfolio Website Template | CODEGRID</title>
 
       <!-- stylesheet -->
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
 
       <!-- bootstrap cdns -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -23,8 +23,8 @@
 
 
       <!-- for on scroll animations -->
-      <link rel="stylesheet" href="animate.css">
-      <script src="wow.min.js"></script>
+      <link rel="stylesheet" href="css/animate.css">
+      <script src="js/wow.min.js"></script>
 
 </head>
 <body>
@@ -164,7 +164,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @guaro.dat</h4>
                                           <br><br>
                                     </div>
 
@@ -183,7 +183,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">nikiguarincia@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
