added project section and minor changes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <link rel="stylesheet" href="css/style.css">
 
       <!-- bootstrap cdns -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <script src="js/bootstrap.min.js"></script>
 
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
@@ -37,7 +37,6 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>/</span></a></li>
-                        <li><a href="work.html">work<span>/</span></a></li>
                         <li><a href="about.html">about me<span>/</span></a></li>
                         <li><a href="contact.html">contact<span>/</span></a></li>
                   </ul>
@@ -53,7 +52,6 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>/</span></a></li>
-                        <li><a href="work.html">work<span>/</span></a></li>
                         <li><a href="about.html">about me<span>/</span></a></li>
                         <li><a href="contact.html">contact<span>/</span></a></li>
                   </ul>
@@ -65,7 +63,7 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">Web and Dekstop developer.</h1>
+                        <h1 class="line anim-typewriter">Web and Desktop developer.</h1>
                   </div>
             </div>
 
@@ -85,7 +83,35 @@
 
                   <div class="whitespace"></div>
                   <div class="whitespace"></div>
+                  
+                  <div class="project-list" onclick="location.href='projects/bluebrand.html'">
+                        <h4 class="project-list-item wow fadeInUp">www.bluebrand.ml</h4>
+                        <br>
+                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
+                  </div>
 
+                  <br><br><br>
+
+                  <div class="project-list" onclick="location.href='projects/fantasy-football.html'">
+                        <h4 class="project-list-item wow fadeInUp">fantasy-football.py</h4>
+                        <br>
+                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
+                  </div>
+
+                  <br><br><br>
+
+                  <div class="project-list" onclick="location.href='projects/battleship.html'">
+                        <h4 class="project-list-item wow fadeInUp">battleship.cpp</h4>
+                        <br>
+                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
+                  </div>
+                  
+                  <br><br><br>
+
+                  <h6 class="project-list-item-description wow fadeInUp" style="color: white; font-weight: bold;">Visit my <a href="" class="no-dec">GitHub</a> for a complete list</h6>
+                  <br><br>
+
+                  <!-- 
                   <div class="row">
                         <div class="col-lg-8"></div>
 
@@ -119,7 +145,7 @@
 
                         <div class="col-lg-6"></div>
                   </div>
-
+            -->
                   <div class="whitespace"></div>
             </div>
             <!--------------- projects section ends here --------------->
@@ -151,7 +177,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @guaro.dat</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="" class="no-dec">guaro.dat</a> </h4>
                                           <br><br>
                                     </div>
 
@@ -159,10 +185,10 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li>
-                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li>
+                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="" class="no-dec">fb</a></li>
+                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="" class="no-dec">ig</a></li>
+                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="" class="no-dec">tw</a></li>
+                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s"><a href="" class="no-dec">yt</a></li>
                                           </ul>
 
                                           <br><br>
