--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">Web and desktop developer.</h1>
-                  </div>
-                        
+                        <h1 class="line anim-typewriter">Web, desktop and mobile developer.</h1>
+                  </div>  
             </div>
 
             <div class="scroll-down"></div>
