text header back to one line

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">Web, desktop and mobile developer.</h1>
+                        <h1 class="line anim-typewriter">Web and desktop developer.</h1>
                   </div>  
             </div>
 
