Update content and footer links

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <div class="project-list" onclick="location.href='projects/bluebrand.html'">
                         <h4 class="project-list-item wow fadeInUp">www.bluebrand.ml</h4>
                         <br>
-                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
+                        <h6 class="project-list-item-description wow fadeInUp">BLUE is a new clothing brand for the new generation that rejects any compromise in terms of style. It is a brand for everyone. With a clean and youthful design and careful attention to the chromatic choice of the products.</h6>
                   </div>
 
                   <br><br><br>
@@ -95,7 +95,7 @@
                   <div class="project-list" onclick="location.href='projects/fantasy-football.html'">
                         <h4 class="project-list-item wow fadeInUp">fantasy_football.py</h4>
                         <br>
-                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
+                        <h6 class="project-list-item-description wow fadeInUp">Simulator of the Fantasy Football written in Python3. You can create your own teams and let them play matches, but pay attenction to the budget!</h6>
                   </div>
 
                   <br><br><br>
@@ -103,7 +103,7 @@
                   <div class="project-list" onclick="location.href='projects/shopping-tracker.html'">
                         <h4 class="project-list-item wow fadeInUp">shoppingTracker.js</h4>
                         <br>
-                        <h6 class="project-list-item-description wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</h6>
+                        <h6 class="project-list-item-description wow fadeInUp">Shopping Tracker is a web-app written in pure JavaScript where you can keep track of expenses incurred in a period of time!</h6>
                   </div>
                   
                   <br><br><br>
@@ -177,7 +177,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="" class="no-dec">guaro.dat</a> </h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="https://www.instagram.com/guaro.dat/" class="no-dec">guaro.dat</a> </h4>
                                           <br><br>
                                     </div>
 
@@ -185,9 +185,9 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="" class="no-dec">fb</a></li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="" class="no-dec">ig</a></li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="" class="no-dec">tw</a></li>
+                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="https://www.facebook.com/guaro.py" class="no-dec">fb</a></li>
+                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="https://www.instagram.com/guaro.dat/" class="no-dec">ig</a></li>
+                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="https://twitter.com/Nicolas_Guarini" class="no-dec">tw</a></li>
                                                 <li id="yt" class="wow fadeInUp" data-wow-delay="1s"><a href="" class="no-dec">yt</a></li>
                                           </ul>
 
