--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="Nicolas Guarini">
 
-      <title>Contact | Portfolio Website Template | CODEGRID</title>
+      <title>Contact | Nicolas Guarini</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="css/style.css">
@@ -120,8 +120,8 @@
 
             <div class="whitespace"></div>
 
-            <!--------------- footer starts here --------------->
-            <div class="footer">
+           <!--------------- footer starts here --------------->
+           <div class="footer">
                   <div class="container">
                         <br><br>
 
@@ -145,7 +145,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="" class="no-dec">guaro.dat</a> </h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="https://www.instagram.com/guaro.dat/" class="no-dec">guaro.dat</a> </h4>
                                           <br><br>
                                     </div>
 
@@ -153,9 +153,9 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="" class="no-dec">fb</a></li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="" class="no-dec">ig</a></li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="" class="no-dec">tw</a></li>
+                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="https://www.facebook.com/guaro.py" class="no-dec">fb</a></li>
+                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="https://www.instagram.com/guaro.dat/" class="no-dec">ig</a></li>
+                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="https://twitter.com/Nicolas_Guarini" class="no-dec">tw</a></li>
                                                 <li id="yt" class="wow fadeInUp" data-wow-delay="1s"><a href="" class="no-dec">yt</a></li>
                                           </ul>
 
