--- a/projects/bluebrand.html
+++ b/projects/bluebrand.html
@@ -136,8 +136,8 @@
             <div class="whitespace"></div>
 
 
-           <!--------------- footer starts here --------------->
-            <div class="footer">
+          <!--------------- footer starts here --------------->
+          <div class="footer">
                   <div class="container">
                         <br><br>
 
@@ -161,7 +161,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="" class="no-dec">guaro.dat</a> </h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @<a href="https://www.instagram.com/guaro.dat/" class="no-dec">guaro.dat</a> </h4>
                                           <br><br>
                                     </div>
 
@@ -169,9 +169,9 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="" class="no-dec">fb</a></li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="" class="no-dec">ig</a></li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="" class="no-dec">tw</a></li>
+                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s"> <a href="https://www.facebook.com/guaro.py" class="no-dec">fb</a></li>
+                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s"><a href="https://www.instagram.com/guaro.dat/" class="no-dec">ig</a></li>
+                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s"><a href="https://twitter.com/Nicolas_Guarini" class="no-dec">tw</a></li>
                                                 <li id="yt" class="wow fadeInUp" data-wow-delay="1s"><a href="" class="no-dec">yt</a></li>
                                           </ul>
 
