Add projects and about me content

--- a/projects/bluebrand.html
+++ b/projects/bluebrand.html
@@ -32,13 +32,13 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">nicolas guarini</a>
+                        <a href="../index.html">nicolas guarini</a>
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>/</span></a></li>
-                        <li><a href="about.html">about me<span>/</span></a></li>
-                        <li><a href="contact.html">contact<span>/</span></a></li>
+                        <li><a href="../index.html">home<span>/</span></a></li>
+                        <li><a href="../about.html">about me<span>/</span></a></li>
+                        <li><a href="../contact.html">contact<span>/</span></a></li>
                   </ul>
 
                   <div id="toggle">
@@ -51,9 +51,9 @@
                   <div class="close-btn">close</div>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>/</span></a></li>
-                        <li><a href="about.html">about me<span>/</span></a></li>
-                        <li><a href="contact.html">contact<span>/</span></a></li>
+                        <li><a href="../index.html">home<span>/</span></a></li>
+                        <li><a href="../about.html">about me<span>/</span></a></li>
+                        <li><a href="../contact.html">contact<span>/</span></a></li>
                   </ul>
             </div>
             <!--------------- navbar ends here --------------->
@@ -68,7 +68,7 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">www.bluebrand.ml</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s"><a href="https://bluebrand.ml" style="text-decoration: none; color: white;">www.bluebrand.html</a></h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
@@ -87,7 +87,8 @@
                                           </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Blue brand is the last project I have undertaken if not one of the most challenging and trying. I made this project in a semi-amateur context, for my friends. However in my opinion the result is not bad at all! Take a look <a href="https://bluebrand.ml" class="no-dec">at this link</a> if you like :) <br><br> This is the link to <a href="https://github.com/nicolasguarini/bluebrand" style="text-decoration: none; color: white;">GitHub!</a></p>
+                                    
                               </div>
                         </div>
                   </div>
@@ -117,7 +118,7 @@
             <br><br>
 
             <!--------------- project nav starts here --------------->
-
+<!--
             <div class="project-nav">
                   <div class="container">
                         <div class="row">
@@ -130,7 +131,7 @@
                         </div>
                   </div>
             </div>
-
+      -->
             <!--------------- project nav starts here --------------->
 
             <div class="whitespace"></div>
