--- a/about.html
+++ b/about.html
@@ -76,9 +76,11 @@
                               <div class="col-lg-12">
                                     <h3 class="wow fadeInUp" data-wow-delay="1.2s">about me.</h3><br>
 
-                                    <p class="wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</p>
+                                    <p class="wow fadeInUp">Hi, I'm Nicolas and I'm a 17 year old developer.
+                                          I have always been passionate about computer science, ever since I was a child, I tried the historic Atari 2600, and love broke out.</p>
 
-                                    <p class="wow fadeInUp" data-wow-delay="0.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, dolore vero quos odit fuga ab, recusandae enim vitae eligendi, adipisci ducimus qui alias? Suscipit a officiis, natus quidem eligendi dolorum!</p>
+                                    <p class="wow fadeInUp" data-wow-delay="0.2s">Now I am studying at I.S.I.S. J.M. Keynes in Varese.
+                                          I studied the latest web technologies like react, vue.js, django, node.js, express.js, flask and others. While in the desktop environment I am still studying C ++ with the libraries Qt, C # and python. Lately I've also been entering the world of mobile, with java, react-native and flutter.</p>
 
                               </div>
                         </div>
