--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                               <div class="col-lg-8">
 
                                     <h3 class="wow fadeInUp" data-wow-delay="1s">say hello 👋</h3><br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, accusantium sint quod voluptatem dolorum, quaerat, ut iusto cumque magni ab repudiandae, quasi minus unde temporibus nulla eum eaque! Placeat praesentium sunt suscipit laboriosam deserunt commodi atque corporis, iure maiores dicta, fugit similique.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.2s">If you have an interesting idea, a project that you would like to start but you don't know where to start, if you want to ask me anything, or if you just want to say hello, contact me!</p>
 
                               </div>
                         </div>
@@ -81,31 +81,31 @@
             <div class="container-fluid">
                   <div class="row">
                         <div class="col-lg-8">
-                              <form name="contact-form" id="contact-form" method="post" action="">
+                              <form name="contact" id="contact-form" method="POST" data-netflify="true">
 
                               <ul>
 
-                              <li class="wow fadeInUp" data-wow-delay="1.4s">
-                                    <label for="contact-name">Name :</label>
-                                    <div class="textarea">
-                                          <input type="text" name="contact-name" id="contact-name" value="" required>
-                                    </div>
-                              </li>
+                                    <li class="wow fadeInUp" data-wow-delay="1.4s">
+                                          <label for="contact-name">Name :</label>
+                                          <div class="textarea">
+                                                <input type="text" name="contact-name" id="contact-name" value="" required>
+                                          </div>
+                                    </li>
 
-                              <li class="wow fadeInUp" data-wow-delay="1.6s">
-                                    <label for="contact-email">Email :</label>
-                                    <div class="textarea">
-                                          <input type="email" name="contact-email" id="contact-email" value="" required>
-                                    </div>
-                              </li>
+                                    <li class="wow fadeInUp" data-wow-delay="1.6s">
+                                          <label for="contact-email">Email :</label>
+                                          <div class="textarea">
+                                                <input type="email" name="contact-email" id="contact-email" value="" required>
+                                          </div>
+                                    </li>
 
-                              <li class="wow fadeInUp" data-wow-delay="1.6s">
-                                    <label for="contact-project">Message :</label>
-                                    <div class="textarea">
-                                          <textarea type="email" name="contact-project" id="contact-project" rows="6" value="" required>
-                                          </textarea>
-                                    </div>
-                              </li>
+                                    <li class="wow fadeInUp" data-wow-delay="1.6s">
+                                          <label for="contact-project">Message :</label>
+                                          <div class="textarea">
+                                                <textarea type="email" name="contact-project" id="contact-project" rows="6" value="" required>
+                                                </textarea>
+                                          </div>
+                                    </li>
 
                               </ul>
 
