--- a/projects/fantasy-football.html
+++ b/projects/fantasy-football.html
@@ -36,7 +36,7 @@
                   </span>
 
                   <ul id="menu">
-                        <li><a href="https://nicolasguarini.ml/">home<span>/</span></a></li>
+                        <li><a href="../index.html">home<span>/</span></a></li>
                         <li><a href="../about.html">about me<span>/</span></a></li>
                         <li><a href="../contact.html">contact<span>/</span></a></li>
                   </ul>
@@ -68,7 +68,7 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">fantasy_football.py</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s"><a href="https://github.com/nicolasgurini/fantasy-football-py" style="text-decoration: none; color: white;">fantasy-football-py</a></h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
@@ -87,7 +87,9 @@
                                           </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">This is a fantasy football simulator written in python 3. I carried out this project during the internship at the LinkIT company. It was a very positive experience where I learned a lot of things like how to structure an object-oriented project in python and how to use Git.
+                                       <br>   In the game, the user can create teams where he can buy and sell players, create formations and more.
+                                          Each team has a medium strength and games can be created between two teams.<br><br>  This is the link to <a href="https://github.com/nicolasguarini/fantasy-football-py" style="text-decoration: none; color: white;">GitHub!</a></p>
                               </div>
                         </div>
                   </div>
@@ -95,23 +97,6 @@
             <!--------------- hero section ends here --------------->
 
             <br><br>
-
-            <!--------------- project nav starts here --------------->
-
-            <div class="project-nav">
-                  <div class="container">
-                        <div class="row">
-                              <div class="col-lg-6 prev">
-                                    <p><ion-icon name="arrow-back"></ion-icon>previous</p>
-                              </div>
-                              <div class="col-lg-6 next">
-                                    <p>next<ion-icon name="arrow-forward"></ion-icon></p>
-                              </div>
-                        </div>
-                  </div>
-            </div>
-
-            <!--------------- project nav starts here --------------->
 
             <div class="whitespace"></div>
 
