--- a/projects/shopping-tracker.html
+++ b/projects/shopping-tracker.html
@@ -36,7 +36,7 @@
                   </span>
 
                   <ul id="menu">
-                        <li><a href="https://nicolasguarini.ml/">home<span>/</span></a></li>
+                        <li><a href="../index.html">home<span>/</span></a></li>
                         <li><a href="../about.html">about me<span>/</span></a></li>
                         <li><a href="../contact.html">contact<span>/</span></a></li>
                   </ul>
@@ -68,7 +68,7 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">shoppingTracker.js</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s"><a href="github.com/nicolasguarini/shopping-tracker-js" style="text-decoration: none; color: white;">shoppingTracker.js</a></h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
@@ -87,7 +87,7 @@
                                           </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">"shopping tracker" is a personal project that I started with the intent to train in writing pure javascript code, without framework, without libraries, without anything. Only me and JS. It was an interesting adventure where I learned many things like managing the virtual DOM.  <br> <br> </bt>This is the link to <a href="https://github.com/nicolasguarini/shopping-tracker-js" style="text-decoration: none; color: white;">GitHub!</a></p>
                               </div>
                         </div>
                   </div>
@@ -95,23 +95,6 @@
             <!--------------- hero section ends here --------------->
 
             <br><br>
-
-            <!--------------- project nav starts here --------------->
-
-            <div class="project-nav">
-                  <div class="container">
-                        <div class="row">
-                              <div class="col-lg-6 prev">
-                                    <p><ion-icon name="arrow-back"></ion-icon>previous</p>
-                              </div>
-                              <div class="col-lg-6 next">
-                                    <p>next<ion-icon name="arrow-forward"></ion-icon></p>
-                              </div>
-                        </div>
-                  </div>
-            </div>
-
-            <!--------------- project nav starts here --------------->
 
             <div class="whitespace"></div>
 
