--- a/index.html
+++ b/index.html
@@ -254,5 +254,17 @@
       new WOW().init();
 
       </script>
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139090673-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139090673-2');
+</script>
+
 </body>
 </html>
