--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
       <meta name="author" content="harrnish">
 
       <title>About Me | Nicolas Guarini</title>
+      
+      <!--SEO AND META-->
+      <meta name="description" content="Hi! I'm a 17 years old Web and Desktop developer from Varese(IT)! You have and interesting project? I can help you!">
+      <meta name="keywords" content="nicolas guarini, Nicolas Guarini, guaro, nicolasguarini.ml, nicolasguarini ml, nicolas guarini sviluppatore, nicolas guarini progetti, sivluppatore, progrmmatore, developer, programmer, sviluppatore varese, programmatore varese, varese, nicolas guarini github, progetti di programmazione, come fare un sito web">
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="css/style.css">
