--- a/projects/shopping-tracker.html
+++ b/projects/shopping-tracker.html
@@ -72,7 +72,7 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s"><a href="github.com/nicolasguarini/shopping-tracker-js" style="text-decoration: none; color: white;">shoppingTracker.js</a></h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s"><a href="https://github.com/nicolasguarini/shopping-tracker-js" style="text-decoration: none; color: white;">shoppingTracker.js</a></h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
