--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                                           I have always been passionate about computer science, ever since I was a child, I tried the historic Atari 2600, and love broke out.</p>
 
                                     <p class="wow fadeInUp" data-wow-delay="0.2s">Now I am studying at I.S.I.S. J.M. Keynes in Varese.
-                                          I studied the latest web technologies like react, vue.js, django, node.js, express.js, flask and others. While in the desktop environment I am still studying C ++ with the libraries Qt, C # and python. Lately I've also been entering the world of mobile, with java, react-native and flutter.</p>
+                                          I studied the latest web technologies like react, vue.js, django, node.js, express.js, flask and others. While in the desktop environment I am still studying C ++ with the Qt library, C # and python. Lately I've also been entering the world of mobile, with java, react-native and flutter.</p>
 
                               </div>
                         </div>
