Fix form to work with Netlify

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
             <div class="container-fluid">
                   <div class="row">
                         <div class="col-lg-8">
-                              <form name="contact" id="contact-form" action="POST" data-netflify="true">
+                              <form name="contact" id="contact-form" method="post" data-netflify="true">
 
                               <ul>
 
