--- a/projects/bluebrand.html
+++ b/projects/bluebrand.html
@@ -91,7 +91,7 @@
                                           </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Blue brand is the last project I have undertaken if not one of the most challenging and trying. I made this project in a semi-amateur context, for my friends. However in my opinion the result is not bad at all! Take a look <a href="https://bluebrand.ml" class="no-dec">at this link</a> if you like :) <br><br> This is the link to <a href="https://github.com/nicolasguarini/bluebrand" style="text-decoration: none; color: white;">GitHub!</a></p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Blue brand is a project that I have undertaken if not one of the most challenging and trying. I made this project in a semi-amateur context, for my friends. However in my opinion the result is not bad at all! Take a look <a href="https://bluebrand.ml" class="no-dec">at this link</a> if you like :) <br><br> This is the link to <a href="https://github.com/nicolasguarini/bluebrand" style="text-decoration: none; color: white;">GitHub!</a></p>
                                     
                               </div>
                         </div>
