--- a/projects/sunriseteam.html
+++ b/projects/sunriseteam.html
@@ -92,7 +92,8 @@
                                     </div>
                                     <br>
                                     <p class="wow fadeInUp" data-wow-delay="1.8s">
-                                        Sunrise is a professional eSports team focused on fortnite, which recently won $ 10K in the World Cup.<br> Their site was built using React, with some additional modules for SEO optimization (react-helmet and react-snapshot). For now, this is the most complete project and I'm most proud of.
+                                        Sunrise is a professional eSports team focused on fortnite, which recently won $ 10K in the World Cup.<br> Their site was built using React, with some additional modules for SEO optimization (react-helmet and react-snapshot). For now, this is the most complete project and I'm most proud of. <br>
+                                        Take a look <a href="https://sunriseteam.it" class="no-dec">at this link</a> if you like :) <br><br> This is the link to <a href="https://github.com/nicolasguarini/sunrise-team" style="text-decoration: none; color: white;">GitHub!</a>
                                     </a></p>
                               </div>
                         </div>
