--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <h4 class="project-list-item wow fadeInUp">www.sunriseteam.it</h4>
                         <br>
                         <h6 class="project-list-item-description wow fadeInUp">
-                              Sunrise is an eSports team born with the intention of bringing the world of eSports to Italy. They recently won 9550$ in the World
+                              Sunrise is an eSports team born with the intention of bringing the world of eSports to Italy. They recently won 9550$ in the Fortnite World Cup.
                         </h6>
                   </div>
 
